--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,10 @@ server:
 logging:
   level:
     root: ${APP_SERVICE_ROOT_LOG_LEVEL:INFO}
+    org.drib.storagebot: ${APP_SERVICE_LOG_LEVEL:INFO}
     org.springframework: ${APP_SERVICE_SPRING_LOG_LEVEL:INFO}
+    org.springframework.web: ${APP_SERVICE_SPRING_WEB_LOG_LEVEL:INFO}
+    org.apache.tomcat: ${APP_SERVICE_TOMCAT_LOG_LEVEL:ERROR}
 
 spring:
   threads:
