--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,9 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocOpenapiWeb}"
 
-	implementation "com.github.spullara.mustache.java:compiler:${mustacheVersion}"
+//	implementation "com.github.spullara.mustache.java:compiler:${mustacheVersion}"
 	implementation "org.telegram:telegrambots-spring-boot-starter:${telegramBotsVersion}"
-	implementation "com.nimbusds:nimbus-jose-jwt:${nimbusJwtVersion}"
+//	implementation "com.nimbusds:nimbus-jose-jwt:${nimbusJwtVersion}"
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -48,7 +48,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:${embedMongoVersion}"
+//	testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:${embedMongoVersion}"
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
