--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -58,6 +58,8 @@ management:
 springdoc:
   swagger-ui:
     path: /api/documentation
+  show:
+    actuator: ${APP_SERVICE_EXPOSE_ACTUATOR_API:false}
 
 scheduled:
   processing:
